Training Acc=0.997 Cross-val Acc=0.935

--- a/Traffic_Sign_Classifier.ipynb
+++ b/Traffic_Sign_Classifier.ipynb
@@ -275,7 +275,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 72,
    "metadata": {
     "collapsed": true
    },
@@ -292,15 +292,15 @@
     "    \n",
     "    mu = 0\n",
     "    sigma = 0.1\n",
-    "    w = {'w_cv1':tf.Variable(tf.truncated_normal(shape = (5,5,3,8), mean = mu, stddev = sigma)),\n",
-    "         'w_cv2':tf.Variable(tf.truncated_normal(shape = (5,5,8,16), mean = mu, stddev = sigma)),\n",
-    "         'w_fc1':tf.Variable(tf.truncated_normal(shape = (400, 100), mean = mu, stddev = sigma)),\n",
-    "         'w_fc2':tf.Variable(tf.truncated_normal(shape = (100, 64), mean = mu, stddev = sigma)),\n",
+    "    w = {'w_cv1':tf.Variable(tf.truncated_normal(shape = (3,3,3,12), mean = mu, stddev = sigma)),\n",
+    "         'w_cv2':tf.Variable(tf.truncated_normal(shape = (5,5,12,16), mean = mu, stddev = sigma)),\n",
+    "         'w_fc1':tf.Variable(tf.truncated_normal(shape = (400, 120), mean = mu, stddev = sigma)),\n",
+    "         'w_fc2':tf.Variable(tf.truncated_normal(shape = (120, 64), mean = mu, stddev = sigma)),\n",
     "         'out':tf.Variable(tf.truncated_normal(shape = (64, n_classes), mean = mu, stddev = sigma)),}\n",
     "    \n",
-    "    b = {'b_cv1':tf.Variable(tf.zeros(shape = (8))),\n",
+    "    b = {'b_cv1':tf.Variable(tf.zeros(shape = (12))),\n",
     "         'b_cv2':tf.Variable(tf.zeros(shape = (16))),\n",
-    "         'b_fc1':tf.Variable(tf.zeros(shape = (100))),\n",
+    "         'b_fc1':tf.Variable(tf.zeros(shape = (120))),\n",
     "         'b_fc2':tf.Variable(tf.zeros(shape = (64))),\n",
     "         'out':tf.Variable(tf.zeros(shape = (n_classes)))  }\n",
     "    \n",
@@ -340,7 +340,7 @@
     "    fc2 = tf.matmul(fc1, w['w_fc2']) + b['b_fc2']\n",
     "    fc2 = tf.nn.relu(fc2)    \n",
     "    \n",
-    "    #fc2 = tf.nn.dropout(fc2, 0.9)\n",
+    "    #fc2 = tf.nn.dropout(fc2, 0.8)\n",
     "    \n",
     "   \n",
     "    # fc2\n",
@@ -368,7 +368,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 73,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "accuracy = tf.reduce_mean( tf.cast( tf.equal(tf.argmax(out_logits,1) , tf.argmax(one_hot_y, 1)), tf.float32) )\n",
+    "\n",
+    "\n",
+    "def evaluation(X_data,y_data):\n",
+    "    num_examples=len(X_data)\n",
+    "    total_accuracy=0\n",
+    "    sess=tf.get_default_session()\n",
+    "    for offset in range(0,num_examples,batch_size):\n",
+    "        batch_x,batch_y=X_data[offset:offset+batch_size], y_data[offset:offset+batch_size]\n",
+    "        accuracy=sess.run(accuracy, feed_dict={x:batch_x,y:batch_y})\n",
+    "        total_accuracy+=(accuracy*len(batch_x))\n",
+    "    return total_accuracy/num_examples"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 74,
    "metadata": {
     "scrolled": true
    },
@@ -377,37 +399,40 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch 1/40: training cost = 760.674 : time elapsed 2.225s\n",
-      "Epoch 1/40: training accuracy = 0.440\n",
-      "Epoch 1/40: Cross-Validation Accuracy = 0.670 : time elapsed 0.162s\n",
+      "Epoch 1/40: training cost = 756.559 : time elapsed 2.547s\n",
+      "Epoch 1/40: training accuracy = 0.441\n",
+      "Epoch 1/40: Cross-Validation Accuracy = 0.600 : time elapsed 0.198s\n",
       "\n",
-      "Epoch 6/40: training cost = 31.850 : time elapsed 2.143s\n",
+      "Epoch 6/40: training cost = 29.713 : time elapsed 2.457s\n",
       "Epoch 6/40: training accuracy = 0.969\n",
-      "Epoch 6/40: Cross-Validation Accuracy = 0.892 : time elapsed 0.136s\n",
+      "Epoch 6/40: Cross-Validation Accuracy = 0.898 : time elapsed 0.152s\n",
       "\n",
-      "Epoch 11/40: training cost = 14.363 : time elapsed 2.120s\n",
-      "Epoch 11/40: training accuracy = 0.985\n",
-      "Epoch 11/40: Cross-Validation Accuracy = 0.911 : time elapsed 0.135s\n",
+      "Epoch 11/40: training cost = 14.977 : time elapsed 2.449s\n",
+      "Epoch 11/40: training accuracy = 0.984\n",
+      "Epoch 11/40: Cross-Validation Accuracy = 0.913 : time elapsed 0.153s\n",
       "\n",
-      "Epoch 16/40: training cost = 10.236 : time elapsed 2.140s\n",
-      "Epoch 16/40: training accuracy = 0.990\n",
-      "Epoch 16/40: Cross-Validation Accuracy = 0.894 : time elapsed 0.136s\n",
+      "Epoch 16/40: training cost = 7.708 : time elapsed 2.440s\n",
+      "Epoch 16/40: training accuracy = 0.992\n",
+      "Epoch 16/40: Cross-Validation Accuracy = 0.917 : time elapsed 0.150s\n",
       "\n",
-      "Epoch 21/40: training cost = 11.460 : time elapsed 2.138s\n",
-      "Epoch 21/40: training accuracy = 0.989\n",
-      "Epoch 21/40: Cross-Validation Accuracy = 0.908 : time elapsed 0.134s\n",
+      "Epoch 21/40: training cost = 8.557 : time elapsed 2.455s\n",
+      "Epoch 21/40: training accuracy = 0.992\n",
+      "Epoch 21/40: Cross-Validation Accuracy = 0.934 : time elapsed 0.147s\n",
       "\n",
-      "Epoch 26/40: training cost = 4.561 : time elapsed 2.138s\n",
-      "Epoch 26/40: training accuracy = 0.996\n",
-      "Epoch 26/40: Cross-Validation Accuracy = 0.926 : time elapsed 0.135s\n",
+      "Epoch 26/40: training cost = 2.202 : time elapsed 2.439s\n",
+      "Epoch 26/40: training accuracy = 0.998\n",
+      "Epoch 26/40: Cross-Validation Accuracy = 0.943 : time elapsed 0.148s\n",
       "\n",
-      "Epoch 31/40: training cost = 8.220 : time elapsed 2.131s\n",
+      "Epoch 31/40: training cost = 8.299 : time elapsed 2.459s\n",
       "Epoch 31/40: training accuracy = 0.993\n",
-      "Epoch 31/40: Cross-Validation Accuracy = 0.910 : time elapsed 0.138s\n",
+      "Epoch 31/40: Cross-Validation Accuracy = 0.937 : time elapsed 0.151s\n",
       "\n",
-      "Epoch 36/40: training cost = 14.639 : time elapsed 2.127s\n",
-      "Epoch 36/40: training accuracy = 0.989\n",
-      "Epoch 36/40: Cross-Validation Accuracy = 0.941 : time elapsed 0.137s\n",
+      "Epoch 36/40: training cost = 4.143 : time elapsed 2.456s\n",
+      "Epoch 36/40: training accuracy = 0.997\n",
+      "Epoch 36/40: Cross-Validation Accuracy = 0.925 : time elapsed 0.153s\n",
+      "\n",
+      "Epoch 40/40: training accuracy = 0.997\n",
+      "Epoch 40/40: Cross-Validation Accuracy = 0.935 : time elapsed 0.147s\n",
       "\n"
      ]
     }
@@ -483,7 +508,9 @@
     "        end_time = time.time()\n",
     "        if ep%5 == 0:\n",
     "            print(\"Epoch {}/{}: Cross-Validation Accuracy = {:.3f} : time elapsed {:.3f}s\\n\".format(ep+1, n_epochs, ep_cv_err, end_time-start_time))\n",
-    "        \n"
+    "\n",
+    "print(\"Epoch {}/{}: training accuracy = {:.3f}\".format(ep+1, n_epochs, ep_tr_acc))\n",
+    "print(\"Epoch {}/{}: Cross-Validation Accuracy = {:.3f} : time elapsed {:.3f}s\\n\".format(ep+1, n_epochs, ep_cv_err, end_time-start_time))\n"
    ]
   },
   {
