--- a/Traffic_Sign_Classifier.ipynb
+++ b/Traffic_Sign_Classifier.ipynb
@@ -449,19 +449,19 @@
     "\n",
     "    # define the computational graph\n",
     "    # convolution layer 1\n",
-    "    # input 32x32x3 --> output 28x28x8\n",
+    "    # input 32x32x3 --> output 28x28x32\n",
     "    with tf.name_scope(\"cv1\"):\n",
     "        cv1 = tf.nn.conv2d(x, w['w_cv1'], strides=s['s_cv1'], padding='VALID') + b['b_cv1']\n",
     "    with tf.name_scope(\"cv1_relu\"):\n",
     "        cv1_r = tf.nn.relu(cv1)\n",
     "\n",
     "    # pooling layer 1\n",
-    "    # input 28x28x8 --> output 14x14x8\n",
+    "    # input 28x28x32 --> output 14x14x32\n",
     "    with tf.name_scope(\"p1\"):\n",
     "        p1 = tf.nn.max_pool(cv1_r, ksize=[1,2,2,1], strides=[1,2,2,1], padding='VALID') \n",
     "\n",
     "    # convolution layer 2\n",
-    "    # input 14x14x8 --> output 10x10x16\n",
+    "    # input 14x14x32 --> output 10x10x64\n",
     "    with tf.name_scope(\"cv2\"):\n",
     "        cv2 = tf.nn.conv2d(p1, w['w_cv2'], strides=s['s_cv2'], padding='VALID') + b['b_cv2']\n",
     "    with tf.name_scope(\"cv2_relu\"):\n",
@@ -469,7 +469,7 @@
     "\n",
     "\n",
     "    # pooling layer 2\n",
-    "    # input 10x10x16 --> output 5x5x16\n",
+    "    # input 10x10x64 --> output 5x5x64\n",
     "    with tf.name_scope(\"cv2_relu\"):\n",
     "        p2 = tf.nn.max_pool(cv2_r, ksize=[1,2,2,1], strides=[1,2,2,1], padding='VALID') \n",
     "\n",
@@ -477,23 +477,23 @@
     "    p2_flat = flatten(p2)\n",
     "\n",
     "    # fc1\n",
-    "    # input 400 --> output 200\n",
+    "    # input 1600 --> output 120\n",
     "    with tf.name_scope(\"fc1\"):\n",
     "        fc1 = tf.matmul(p2_flat, w['w_fc1']) + b['b_fc1']\n",
     "    with tf.name_scope(\"fc1_relu\"):\n",
     "        fc1_r = tf.nn.relu(fc1)\n",
     "\n",
     "    # fc2\n",
-    "    # input 400 --> output 200\n",
+    "    # input 120 --> output 84\n",
     "    with tf.name_scope(\"fc2\"):\n",
     "        fc2 = tf.matmul(fc1_r, w['w_fc2']) + b['b_fc2']\n",
     "    with tf.name_scope(\"fc2_relu\"):\n",
     "        fc2_r = tf.nn.relu(fc2)    \n",
     "\n",
-    "    #fc2 = tf.nn.dropout(fc2, 0.8)\n",
+    "    fc2 = tf.nn.dropout(fc2, 0.8)\n",
     "\n",
     "    # fc2\n",
-    "    # input 200 --> output n_classes\n",
+    "    # input 84 --> output 10 Classes\n",
     "    with tf.name_scope(\"out\"):\n",
     "        out_logits = tf.matmul(fc2_r, w['out']) + b['out']\n",
     "\n",
@@ -1103,7 +1103,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.1"
+   "version": "3.5.2"
   },
   "widgets": {
    "state": {},
